<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false" tools:ignore="ResourceName" />
    <string name="xui_content_desc_refresh">Refresh</string>
    <string name="xui_text_empty_list">No records</string>

    <string name="xui_delete_dialog_title">Confirm Deletion!</string>
    <string name="xui_delete_dialog_body">Are you sure you want to delete record?</string>
    <string name="xui_delete_dialog_pos_btn">Delete</string>
    <string name="xui_delete_dialog_neg_btn">Cancel</string>
    <string name="xui_picker_dialog_positive_button">Set</string>
    <string name="xui_menu_list_search">Search</string>
    <string name="xui_menu_list_sort">Sort</string>
    <string name="xui_menu_list_filter">Filter</string>
    <string name="xui_menu_list_refresh">Refresh</string>

    <!-- Data Table -->
    <string name="xui_data_table_shown_entries">%1$d to %2$d of %3$d entries</string>
    <string name="xui_data_table_button_previous">Previous</string>
    <string name="xui_data_table_button_next">Next</string>
    <string name="xui_data_table_goto_page">Go to Page</string>
    <string name="xui_data_table_entries">entries</string>
    <string name="xui_data_table_show">Show</string>
    <string name="xui_zero">0</string>
    <string name="xui_content_desc_sort">Sort</string>
    <string name="xui_menu_delete">Delete</string>
    <string name="xui_menu_update">Update</string>
    <string name="xui_search_hint">Search…</string>
</resources>