<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@id/table"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/page_size_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/page_container"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/page_size_prefix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/xui_data_table_show"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/page_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/page_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/data_table_entries"
                app:layout_constraintBottom_toBottomOf="@id/page_size_prefix"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/page_size_prefix"
                app:layout_constraintTop_toTopOf="@id/page_size_prefix" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/page_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingLeft="16dp"
            app:layout_constraintBottom_toBottomOf="@id/page_size_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/page_size_container"
            app:layout_constraintTop_toTopOf="@id/page_size_container"
            tools:ignore="RtlSymmetry">

            <TextView
                android:id="@+id/page_prefix"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/xui_data_table_goto_page"
                android:textAlignment="textEnd"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/page"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/page"
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:gravity="center"
                android:hint="@string/xui_zero"
                android:imeOptions="actionGo"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLines="1"
                android:singleLine="true"
                android:textAlignment="gravity"
                app:layout_constraintBottom_toBottomOf="@id/page_prefix"
                app:layout_constraintEnd_toStartOf="@id/submit_page"
                app:layout_constraintStart_toEndOf="@id/page_prefix"
                app:layout_constraintTop_toTopOf="@id/page_prefix" />

            <ImageButton
                android:id="@+id/submit_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:background="@color/colorTransparent"
                android:contentDescription="@string/xui_data_table_goto_page"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="@id/page"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/page"
                app:layout_constraintTop_toTopOf="@id/page"
                app:srcCompat="@drawable/ic_action_forward" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.evrencoskun.tableview.TableView
        android:id="@+id/table"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:column_header_height="@dimen/xui_data_table_corner_view_dimen"
        app:layout_constraintBottom_toTopOf="@id/footer_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_container"
        app:row_header_width="@dimen/xui_data_table_corner_view_dimen"
        app:selected_color="?attr/colorControlHighlight"
        app:separator_color="?attr/colorOnSurface"
        app:shadow_color="?attr/colorControlHighlight"
        app:unselected_color="?attr/colorSurface" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/footer_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/table">

        <ImageButton
            android:id="@+id/previous"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/xui_menu_icon_width"
            android:adjustViewBounds="true"
            android:background="@color/colorTransparent"
            android:contentDescription="@string/xui_data_table_button_previous"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/footer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_action_previous" />

        <TextView
            android:id="@+id/footer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/xui_data_table_shown_entries"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@id/previous"
            app:layout_constraintEnd_toStartOf="@id/next"
            app:layout_constraintStart_toEndOf="@id/previous"
            app:layout_constraintTop_toTopOf="@id/previous"
            tools:text="1 to 10 of 80 entries" />

        <ImageButton
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/xui_menu_icon_width"
            android:adjustViewBounds="true"
            android:background="@color/colorTransparent"
            android:contentDescription="@string/xui_data_table_button_next"
            android:scaleType="fitXY"
            android:text="@string/xui_data_table_button_next"
            app:layout_constraintBottom_toBottomOf="@id/footer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/footer"
            app:layout_constraintTop_toTopOf="@id/footer"
            app:srcCompat="@drawable/ic_action_next" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>